# redteamllm

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  tst.py
results/: extract.py  extract_stop.py  json_results.json  output_data.xlsx  sar.json  stop_reason.yaml  stop_reson.json  victim1.json
results/Cewlkid/no_reason/: saved.sh
results/Cewlkid/reason/: saved.sh
results/ctf4/: prompt
results/ctf4/no_reason/: saved.sh
results/ctf4/reason/: saved.sh
results/json_results/: Cewlkid.json  ctf4.json  sar.json  toexcel.py  westside.json
results/sar/: prompt
results/sar/no_reason/: saved.sh
results/sar/reason/: saved.sh
results/victim1/: prompt
results/westside/: prompt
scripts/: clean.sh  start_db_container.sh
src/execution_tree/: __init__.py  abstract_node.py  execution_node.py  failed_node.py  planning_node.py  tst.py
src/execution_tree/visitor/: __init__.py  abstract_visitor.py  executer_visitor.py
src/llm/: llm_wrapper.py
src/planner/: __init__.py  llm_planner_tools.py  planner_visitor.py  tst.py
src/react/: act.py  react.py  reason.py
src/react/act/: __init__.py  act.py  act_tools.py
src/react/reason/: reason.py  reason_tools.py
src/redteamagent/: entry.py  redteamagent.py
src/redteamagent/config/: config.json  config.py
src/visitor/: __init__.py
test/: pyvenv.cfg
testing_scripts/: test_db.py  tst.py
testing_scripts/db_scripts/: db_manager.py  models.py  test_db.py  vector_emb.py
testing_scripts/openai_scripts/: enhanced_tools.py  index.html  subproc.py  tools.py
tests/: lol
(+220 files in other folders)
