[build-system]
requires= ["setuptools >=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name ="RedTeamAgent"
dependencies = [
    "pydantic",
    "openai",
    "multipledispatch",
    "termcolor"
    ]

[project.scripts]
RedTeamAgent = "redteamagent.entry:main"
ReAct = "redteamagent.react.react:main"